fix: spacing in figures
This is a quick hack for unnecessary spaces in figures... will need to do properly at some point.

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -15,3 +15,14 @@ html {
   margin-top: 0;
   margin-bottom: 0;
 }
+
+/* temp hack for figure and image spacing */
+
+figure img,
+figure figcaption p {
+  @apply my-0 !important;
+}
+
+figure figcaption {
+  @apply mt-3 mb-0 text-center !important;
+}
